# performance-comparison-of-gpt-4o-vs-35-turbo

./: README.md  pyproject.toml
src/: analyze.py  main.py
